@startuml
class EmployeeController {
  +createEmployee(employee: Employee): BaseResponse<Employee>
}
interface EmployeeMapper {
  +insert(employee: Employee): int ' or void, or Employee if it's returned with ID
}
class Employee {
  +id: Long
  +name: String
  +address: String 
  +gender: Integer
  +rocId: String
  ' other fields as per actual entity
}
class BaseResponse<T> {
  +code: String
  +message: String
  +data: T
}

EmployeeController ..> EmployeeMapper : uses
EmployeeController ..> BaseResponse : uses in response
EmployeeController ..> Employee : uses in request and response
EmployeeMapper ..> Employee : uses as parameter
BaseResponse o-- Employee : (T is Employee)
@enduml
